--- a/style.css
+++ b/style.css
@@ -120,3 +120,25 @@ body {
     font-style: italic;
     font-weight: normal;
 }
+
+@media (max-width: 768px) {
+    .todo {
+        width: 90%;
+    }
+
+    .todo_title img {
+        width: 40px;
+    }
+
+    .todo_title h1 {
+        font-size: 30px;
+    }
+
+    .todo_item div {
+        padding-left: 5px;
+    }
+
+    .todo_new-item > input {
+        font-size: 13px;
+    }
+}
